--- a/src/app/component/template/header/header.component.css
+++ b/src/app/component/template/header/header.component.css
@@ -163,6 +163,7 @@ p {
 .sub-logo-sistema .sub-nome-sistema {
   font-weight: 500;
   font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: #d8e6ff;
 }
 
