--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -9,7 +9,7 @@
 
    <span class="title-group2">
         <a href="https://www.senaipr.org.br/">
-            <img class="logo1" src="assets/img/fiep-senai-logo4.png" alt="logo SENAI">
+            <img class="logo1" src="assets/img/fiep-senai-logo2.png" alt="logo SENAI">
         </a> 
 
     </span> 
@@ -25,7 +25,7 @@
 
 <!-- Barra secundária de login e navegação do usuário -->
 <div class="sub-barra-login">
-  <div class="sub-logo-sistema">
+<div class="sub-logo-sistema">
         
        <div class="sub-logo-sistema">
         <span class="sub-nome-sistema">SENAI | Sistema Fiep</span>
@@ -33,11 +33,28 @@
            
   </div> 
 
+ <div class="sub-logo-sistema">
+        
+       <div class="sub-logo-sistema">
+        <span class="sub-nome-sistema"> Educação Profissional </span>
+    </div>
+           
+  </div>  
+
+ <div class="sub-logo-sistema">
+        
+       <div class="sub-logo-sistema">
+        <span class="sub-nome-sistema">Informação e Tecnologia</span>
+    </div>
+           
+  </div> 
+
+
   <div class="sub-acoes-usuario">
     <a href="/" class="sub-link">Tela Inicial</a>
     <a href="/usuario" class="sub-link">Área do Usuário</a>
     <a href="/inicial" class="sub-link">Centro de Suporte</a>
     <a href="/notificacoes" class="sub-link"><a>Contatos</a></a>
-    <button class="sub-btn-login">Login</button>
+    <button class="sub-btn-login">Test</button>
   </div>
 </div>
