--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -54,7 +54,7 @@
     <a href="/" class="sub-link">Tela Inicial</a>
     <a href="/usuario" class="sub-link">Área do Usuário</a>
     <a href="/inicial" class="sub-link">Centro de Suporte</a>
-    <a href="/notificacoes" class="sub-link"><a>Contatos</a></a>
+    <a routerLink="/contatos" class="sub-link">Contatos</a>
     <button class="sub-btn-login">Test</button>
   </div>
 </div>
